--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,31 @@
                     <failIfNoTests>true</failIfNoTests>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.5</version>
+                <executions>
+                    <execution>
+                        <!--id(придумываемсами)-->
+                        <id>prepare-agent</id>
+                        <phase>initialize</phase>
+                        <goals>
+                            <!--какую цель выполняем(берём из справки)-->
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <!--id(придумываемсами)-->
+                        <id>report</id>
+                        <goals>
+                            <!--какую цель выполняем(берём из справки)-->
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
 
